--- a/app/src/main/res/layout/cell_bankcard.xml
+++ b/app/src/main/res/layout/cell_bankcard.xml
@@ -1,73 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/len_2"
     android:background="#0D6F3C"
+    android:orientation="horizontal"
     android:padding="@dimen/len_10">
 
     <net.qiujuer.italker.common.widget.PortraitView
         android:id="@+id/portraitView2"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="@dimen/len_20"
-
         android:layout_marginTop="8dp"
-        android:src="@drawable/default_portrait"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        android:src="@drawable/default_portrait" />
 
-    <TextView
-        android:id="@+id/bankName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="中国邮政储蓄银行"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/cardType"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
-
-
-    <TextView
-        android:id="@+id/cardType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="储蓄卡"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="33dp" />
-
-    <TextView
-        android:id="@+id/cardNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="****       ****       ****       1234"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@id/cardType"
-        tools:ignore="MissingConstraints" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="78dp" />
+        android:padding="@dimen/len_10">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="5dp"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/bankName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="@dimen/len_2"
+            android:text="中国邮政储蓄银行"
+            android:textColor="@color/white" />
+
+
+        <TextView
+            android:id="@+id/cardType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="@dimen/len_2"
+            android:text="储蓄卡"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/cardNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="@dimen/len_2"
+            android:text="****       ****       ****       1234" />
+
+    </LinearLayout>
+</LinearLayout>
